add Roboto font, rearrange CSS includes

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title>Track That Satellite</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.ico" />
+    <link id="appCSS" href="styles/app.css" media="screen, projection" rel="stylesheet" type="text/css">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.css' rel='stylesheet' />
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="robots" content="all">
     <meta name="author" content="David Calhoun">
     <meta name="description" content="Map tool for visualizing satellite locations.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="icon" type="image/png" href="favicon.ico" />
-
-    <link id="appCSS" href="styles/app.css" media="screen, projection" rel="stylesheet" type="text/css">
-    <link href='https://api.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.css' rel='stylesheet' />
   </head>
 
   <body>
