--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     <div id="app"></div>
     <!-- TODO for prod: react.min.js, react-dom.min.js -->
     <!-- TODO: wrap up all vendor stuff into one file -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.0.0-rc.2/umd/react.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.0.0-rc.2/umd/react-dom.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.0.0/umd/react.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.0.0/umd/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.2.0/react-router.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.6/react-redux.js"></script>
