--- a/new/src/index.html
+++ b/new/src/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="icon" type="image/png" href="favicon.ico" />
-    <link id="appCSS" href="styles/app.css" media="screen, projection" rel="stylesheet" type="text/css">
-    <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
+    <link href='./mapbox-gl.css' rel='stylesheet' />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="content-language" content="en" />
