--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 		/>
-		<link rel="icon" type="image/png" href="favicon.ico" />
+		<link rel="icon" type="image/png" href="/favicon.ico" />
 
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="content-language" content="en" />
